# mingw-w64-x86_64-opencl-test

./: CMakeLists.txt  README.md
resources/: example00.c
src_example/example00/: CMakeLists.txt  code.c  main.cpp
src_example/example01/: CMakeLists.txt  main.cpp
src_example/example02/: CMakeLists.txt  main.cpp
src_example/example03/: CMakeLists.txt
src_example/example04/: CMakeLists.txt  main.c
src_example/example05/: CMakeLists.txt
